# book_api

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_author_genre_language_publisher_alter_book_name_and_more.py
api/tests/: test_books.py
books_api/: settings.py  urls.py
